add some album cover and fix bug onended repeat feature

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 		"svelte": "^3.44.0",
 		"vite": "^2.9.13"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"notyf": "^3.10.0"
+	}
 }
